# todomvc-011

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20240101000000_create_todos.sql
src/: app.rs  lib.rs  main.rs  model.rs  server.rs
src/components/: footer.rs  header.rs  todo_item.rs  todo_list.rs
style/: main.css
